finish basic logic

--- a/webgl/index.html
+++ b/webgl/index.html
@@ -5,14 +5,21 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
+  <style>
+      canvas {
+          border: 1px solid;
+          margin: 2px
+      }
+  </style>
 </head>
 <body>
 <div id="app">
   {{canvas.width}}
   {{canvas.height}}
   <img ref="image" src="../assets/img/img.jpg" alt="original image for processing">
-  <canvas ref="invert" :width="canvas.width" :height="canvas.height" style="border: 1px solid"></canvas>
-  <canvas ref="average" :width="canvas.width" :height="canvas.height" style="border: 1px solid"></canvas>
+  <canvas ref="invert" :width="canvas.width" :height="canvas.height"></canvas>
+  <canvas ref="average" :width="canvas.width" :height="canvas.height"></canvas>
+  <canvas ref="kernel" :width="canvas.width" :height="canvas.height"></canvas>
 </div>
 
 <script src="../assets/lib/sgl.js"></script>
@@ -30,6 +37,7 @@
     }
 
     `
+
     function setFSSMain(main) {
         return `#version 300 es
     precision highp float;
@@ -41,6 +49,7 @@
     }
     `
     }
+
     let invert_fss = setFSSMain("outColor = vec4(vec3(1,1,1)-texture(u_image, v_texCoord).rgb,1);")
     let average_fss = setFSSMain(`
                     vec2 onePixel = vec2(1) / vec2(textureSize(u_image, 0));
@@ -49,7 +58,34 @@
                         texture(u_image, v_texCoord + vec2( onePixel.x, 0.0)) +
                         texture(u_image, v_texCoord + vec2(-onePixel.x, 0.0))) / 3.0;
                     `)
+    let kernel_fss = `#version 300 es
 
+    precision highp float;
+
+    uniform sampler2D u_image;
+
+    uniform float u_kernel[9];
+    uniform float u_kernelWeight;
+
+    in vec2 v_texCoord;
+    out vec4 outColor;
+
+    void main() {
+      vec2 onePixel = vec2(1) / vec2(textureSize(u_image, 0));
+
+      vec4 colorSum =
+          texture(u_image, v_texCoord + onePixel * vec2(-1, -1)) * u_kernel[0] +
+          texture(u_image, v_texCoord + onePixel * vec2( 0, -1)) * u_kernel[1] +
+          texture(u_image, v_texCoord + onePixel * vec2( 1, -1)) * u_kernel[2] +
+          texture(u_image, v_texCoord + onePixel * vec2(-1,  0)) * u_kernel[3] +
+          texture(u_image, v_texCoord + onePixel * vec2( 0,  0)) * u_kernel[4] +
+          texture(u_image, v_texCoord + onePixel * vec2( 1,  0)) * u_kernel[5] +
+          texture(u_image, v_texCoord + onePixel * vec2(-1,  1)) * u_kernel[6] +
+          texture(u_image, v_texCoord + onePixel * vec2( 0,  1)) * u_kernel[7] +
+          texture(u_image, v_texCoord + onePixel * vec2( 1,  1)) * u_kernel[8] ;
+      outColor = vec4((colorSum / u_kernelWeight).rgb, 1);
+    }
+    `
 
     Vue.createApp({
         data() {
@@ -73,12 +109,67 @@
                     await Vue.nextTick()
                     this.draw("invert", vertexShaderSource, invert_fss)
                     this.draw("average", vertexShaderSource, average_fss)
+                    this.draw_kernel("kernel", [
+                        -1, -1, -1,
+                        -1, 8, -1,
+                        -1, -1, -1
+                    ])
                 },
                 deep: true,
             }
         },
         methods: {
+            draw_kernel(ref, kernel) {
+                let {gl, glProgram} = this.initial(ref, vertexShaderSource, kernel_fss);
+
+                let u_kernel = gl.getUniformLocation(glProgram, "u_kernel");
+                gl.uniform1fv(u_kernel, kernel)
+                gl.uniform1f(gl.getUniformLocation(glProgram, "u_kernelWeight"), computeKernelWeight(kernel))
+
+                function computeKernelWeight(kernel) {
+                    let weight = kernel.reduce(function (prev, curr) {
+                        return prev + curr;
+                    });
+                    return weight <= 0 ? 1 : weight;
+                }
+
+                function frame(t) {
+                    let a = Math.abs(Math.sin(t *Math.sin(t * 0.001)* 0.001))
+                    gl.uniform1fv(u_kernel, [
+                        -a, -a, -a,
+                        -a, 8, -a,
+                        -a, -a, -a
+                    ])
+                    gl.drawArrays(gl.TRIANGLE_STRIP, 0, 4)
+                    requestAnimationFrame(frame)
+                }
+                frame()
+            },
             draw(ref, vertexShaderSource, fragmentShaderSource) {
+                let {gl, glProgram} = this.initial(ref, vertexShaderSource, fragmentShaderSource);
+
+                function frame(t) {
+                    let a = Math.sin(t * 0.005)
+
+                    setVertexAttribArray(gl, glProgram, new Float32Array([
+                        a, -1,
+                        -1, -1,
+                        a, a,
+                        -1, a
+                    ]), "a_position", 2, false)
+                    gl.drawArrays(gl.TRIANGLE_STRIP, 0, 4)
+                    requestAnimationFrame(frame)
+
+                }
+
+                //
+                // setInterval(() => {
+                //         requestAnimationFrame(frame)
+                //     }
+                //     , 100)
+                frame()
+            },
+            initial(ref, vertexShaderSource, fragmentShaderSource) {
                 let gl = this.$refs[ref].getContext("webgl2");
                 let glProgram = initShader(gl, vertexShaderSource, fragmentShaderSource);
                 setVertexAttribArray(gl, glProgram, new Float32Array([
@@ -95,8 +186,9 @@
                 ]), "a_texCoord", 2, false)
                 gl.pixelStorei(gl.UNPACK_FLIP_Y_WEBGL, true)
                 setSampler2D(gl, glProgram, this.$refs.image, "u_image")
-                gl.drawArrays(gl.TRIANGLE_STRIP, 0, 4)
+                return {gl, glProgram}
             }
+
         }
     }).mount('#app')
 
