--- a/webgl/index.html
+++ b/webgl/index.html
@@ -16,7 +16,7 @@
 <div id="app">
   {{canvas.width}}
   {{canvas.height}}
-  <img ref="image" src="../assets/img/img.jpg" alt="original image for processing">
+  <img ref="image" crossorigin="anonymous" src="https://objectstorage.ap-tokyo-1.oraclecloud.com/p/Sk1G5QY6LFhuEU_jRAAe3PY21O2WMd65K-oB9wNZZwwtFc749owv1XzgKVAontz4/n/nrshlr1tpmbr/b/bucket-20210530-1145/o/68.png" alt="original image for processing">
   <canvas ref="invert" :width="canvas.width" :height="canvas.height"></canvas>
   <canvas ref="average" :width="canvas.width" :height="canvas.height"></canvas>
   <canvas ref="kernel" :width="canvas.width" :height="canvas.height"></canvas>
@@ -87,6 +87,108 @@
     }
     `
 
+    let kernels = {
+        normal: [
+            0, 0, 0,
+            0, 1, 0,
+            0, 0, 0,
+        ],
+        gaussianBlur: [
+            0.045, 0.122, 0.045,
+            0.122, 0.332, 0.122,
+            0.045, 0.122, 0.045,
+        ],
+        gaussianBlur2: [
+            1, 2, 1,
+            2, 4, 2,
+            1, 2, 1,
+        ],
+        gaussianBlur3: [
+            0, 1, 0,
+            1, 1, 1,
+            0, 1, 0,
+        ],
+        unsharpen: [
+            -1, -1, -1,
+            -1,  9, -1,
+            -1, -1, -1,
+        ],
+        sharpness: [
+            0, -1,  0,
+            -1,  5, -1,
+            0, -1,  0,
+        ],
+        sharpen: [
+            -1, -1, -1,
+            -1, 16, -1,
+            -1, -1, -1,
+        ],
+        edgeDetect: [
+            -0.125, -0.125, -0.125,
+            -0.125,  1,     -0.125,
+            -0.125, -0.125, -0.125,
+        ],
+        edgeDetect2: [
+            -1, -1, -1,
+            -1,  8, -1,
+            -1, -1, -1,
+        ],
+        edgeDetect3: [
+            -5, 0, 0,
+            0, 0, 0,
+            0, 0, 5,
+        ],
+        edgeDetect4: [
+            -1, -1, -1,
+            0,  0,  0,
+            1,  1,  1,
+        ],
+        edgeDetect5: [
+            -1, -1, -1,
+            2,  2,  2,
+            -1, -1, -1,
+        ],
+        edgeDetect6: [
+            -5, -5, -5,
+            -5, 39, -5,
+            -5, -5, -5,
+        ],
+        sobelHorizontal: [
+            1,  2,  1,
+            0,  0,  0,
+            -1, -2, -1,
+        ],
+        sobelVertical: [
+            1,  0, -1,
+            2,  0, -2,
+            1,  0, -1,
+        ],
+        previtHorizontal: [
+            1,  1,  1,
+            0,  0,  0,
+            -1, -1, -1,
+        ],
+        previtVertical: [
+            1,  0, -1,
+            1,  0, -1,
+            1,  0, -1,
+        ],
+        boxBlur: [
+            0.111, 0.111, 0.111,
+            0.111, 0.111, 0.111,
+            0.111, 0.111, 0.111,
+        ],
+        triangleBlur: [
+            0.0625, 0.125, 0.0625,
+            0.125,  0.25,  0.125,
+            0.0625, 0.125, 0.0625,
+        ],
+        emboss: [
+            -2, -1,  0,
+            -1,  1,  1,
+            0,  1,  2,
+        ],
+    };
     Vue.createApp({
         data() {
             return {
