--- a/webgl/index.html
+++ b/webgl/index.html
@@ -16,7 +16,7 @@
 <div id="app">
   {{canvas.width}}
   {{canvas.height}}
-  <img ref="image" crossorigin="anonymous" src="https://objectstorage.ap-tokyo-1.oraclecloud.com/p/Sk1G5QY6LFhuEU_jRAAe3PY21O2WMd65K-oB9wNZZwwtFc749owv1XzgKVAontz4/n/nrshlr1tpmbr/b/bucket-20210530-1145/o/68.png" alt="original image for processing">
+  <img ref="image" crossorigin="anonymous" src="../assets/img/img.jpg" alt="original image for processing">
   <canvas ref="invert" :width="canvas.width" :height="canvas.height"></canvas>
   <canvas ref="average" :width="canvas.width" :height="canvas.height"></canvas>
   <canvas ref="kernel" :width="canvas.width" :height="canvas.height"></canvas>
@@ -110,13 +110,13 @@
         ],
         unsharpen: [
             -1, -1, -1,
-            -1,  9, -1,
+            -1, 9, -1,
             -1, -1, -1,
         ],
         sharpness: [
-            0, -1,  0,
-            -1,  5, -1,
-            0, -1,  0,
+            0, -1, 0,
+            -1, 5, -1,
+            0, -1, 0,
         ],
         sharpen: [
             -1, -1, -1,
@@ -125,12 +125,12 @@
         ],
         edgeDetect: [
             -0.125, -0.125, -0.125,
-            -0.125,  1,     -0.125,
+            -0.125, 1, -0.125,
             -0.125, -0.125, -0.125,
         ],
         edgeDetect2: [
             -1, -1, -1,
-            -1,  8, -1,
+            -1, 8, -1,
             -1, -1, -1,
         ],
         edgeDetect3: [
@@ -140,12 +140,12 @@
         ],
         edgeDetect4: [
             -1, -1, -1,
-            0,  0,  0,
-            1,  1,  1,
+            0, 0, 0,
+            1, 1, 1,
         ],
         edgeDetect5: [
             -1, -1, -1,
-            2,  2,  2,
+            2, 2, 2,
             -1, -1, -1,
         ],
         edgeDetect6: [
@@ -154,24 +154,24 @@
             -5, -5, -5,
         ],
         sobelHorizontal: [
-            1,  2,  1,
-            0,  0,  0,
+            1, 2, 1,
+            0, 0, 0,
             -1, -2, -1,
         ],
         sobelVertical: [
-            1,  0, -1,
-            2,  0, -2,
-            1,  0, -1,
+            1, 0, -1,
+            2, 0, -2,
+            1, 0, -1,
         ],
         previtHorizontal: [
-            1,  1,  1,
-            0,  0,  0,
+            1, 1, 1,
+            0, 0, 0,
             -1, -1, -1,
         ],
         previtVertical: [
-            1,  0, -1,
-            1,  0, -1,
-            1,  0, -1,
+            1, 0, -1,
+            1, 0, -1,
+            1, 0, -1,
         ],
         boxBlur: [
             0.111, 0.111, 0.111,
@@ -180,13 +180,13 @@
         ],
         triangleBlur: [
             0.0625, 0.125, 0.0625,
-            0.125,  0.25,  0.125,
+            0.125, 0.25, 0.125,
             0.0625, 0.125, 0.0625,
         ],
         emboss: [
-            -2, -1,  0,
-            -1,  1,  1,
-            0,  1,  2,
+            -2, -1, 0,
+            -1, 1, 1,
+            0, 1, 2,
         ],
     };
     Vue.createApp({
@@ -236,16 +236,21 @@
                 }
 
                 function frame(t) {
-                    let a = Math.abs(Math.sin(t *Math.sin(t * 0.001)* 0.001))
-                    gl.uniform1fv(u_kernel, [
-                        -a, -a, -a,
-                        -a, 8, -a,
-                        -a, -a, -a
-                    ])
+                    // let a = Math.abs(Math.sin(t * Math.sin(t * 0.001) * 0.001))
+                    let length = Object.keys(kernels).length
+                    let index = Math.random() * length
+                    let key = Object.keys(kernels)[Math.floor(index)]
+                    console.log(key)
+                    gl.uniform1fv(u_kernel, kernels[key])
+                    gl.uniform1f(gl.getUniformLocation(glProgram, "u_kernelWeight"), computeKernelWeight(kernels[key]))
                     gl.drawArrays(gl.TRIANGLE_STRIP, 0, 4)
-                    requestAnimationFrame(frame)
                 }
+
                 frame()
+                setInterval(() => {
+                    requestAnimationFrame(frame)
+
+                }, 300)
             },
             draw(ref, vertexShaderSource, fragmentShaderSource) {
                 let {gl, glProgram} = this.initial(ref, vertexShaderSource, fragmentShaderSource);
@@ -264,11 +269,6 @@
 
                 }
 
-                //
-                // setInterval(() => {
-                //         requestAnimationFrame(frame)
-                //     }
-                //     , 100)
                 frame()
             },
             initial(ref, vertexShaderSource, fragmentShaderSource) {
