--- a/webgl/dip.html
+++ b/webgl/dip.html
@@ -44,13 +44,13 @@
             0, 0,
             1, 1,
             0, 1
-        ]), "a_position", 2, false)
+        ]), gl.FLOAT, "a_position", 2, false)
         setVertexAttribArray(gl, glProgram, new Float32Array([
             1, 0,
             0, 0,
             1, 1,
             0, 1
-        ]), "a_texCoord", 2, false)
+        ]), gl.FLOAT, "a_texCoord", 2, false)
         gl.pixelStorei(gl.UNPACK_FLIP_Y_WEBGL, true)
         setSampler2D(gl, glProgram, image, "u_image")
         gl.drawArrays(gl.TRIANGLE_STRIP, 0, 4)
