--- a/webgl/index.html
+++ b/webgl/index.html
@@ -241,7 +241,7 @@
                         -1, -1,
                         a, a,
                         -1, a
-                    ]), "a_position", 2, false)
+                    ]), gl.FLOAT, "a_position", 2, false)
                     gl.drawArrays(gl.TRIANGLE_STRIP, 0, 4)
                     // requestAnimationFrame(frame)
                 }
@@ -257,13 +257,13 @@
                     -1, -1,
                     1, 1,
                     -1, 1
-                ]), "a_position", 2, false)
+                ]), gl.FLOAT, "a_position", 2, false)
                 setVertexAttribArray(gl, glProgram, new Float32Array([
                     1, 0,
                     0, 0,
                     1, 1,
                     0, 1
-                ]), "a_texCoord", 2, false)
+                ]), gl.FLOAT, "a_texCoord", 2, false)
                 gl.pixelStorei(gl.UNPACK_FLIP_Y_WEBGL, true)
                 setSampler2D(gl, glProgram, this.$refs.image, "u_image")
                 return {gl, glProgram}
