--- a/webgl/texture.html
+++ b/webgl/texture.html
@@ -70,14 +70,14 @@ void main() {
             1, 1,
             0, 0,
             0, 1,
-        ]), "a_position", 2, false)
+        ]), gl.FLOAT, "a_position", 2, false)
 
         setVertexAttribArray(gl, glProgram, new Float32Array([
             1, 0,
             1, 1,
             0, 0,
             0, 1,
-        ]), "a_texCoord", 2, false)
+        ]), gl.FLOAT, "a_texCoord", 2, false)
 
         gl.drawArrays(gl.TRIANGLE_STRIP, 0, 4);
     }
