--- a/webgl/audio-webgl.html
+++ b/webgl/audio-webgl.html
@@ -4,24 +4,49 @@
   <meta charset="UTF-8">
   <title>Title</title>
 </head>
+<style>
+    #canvas {
+        position: fixed;
+        left: 0;
+        top: 0;
+        z-index: -1;
+        /*border: 1px solid;*/
+    }
+</style>
 <body>
-<canvas id="canvas" width="300" height="300" style="border: 1px solid"></canvas>
-<input type="file" id="upload" accept="audio/*">
+<canvas id="canvas" width="100vw" height="100vw"></canvas>
+<input type="file" id="file" accept="audio/*">
 <button onclick="play()">Play</button>
 <script src="../assets/lib/sgl.js"></script>
 <script>
-
+    let file = document.getElementById("file");
     let canvas = document.getElementById("canvas")
+
+    canvas.width = window.innerWidth
+    canvas.height = window.innerHeight
     let gl = canvas.getContext("webgl2")
+
+    let audioCtx = new window.AudioContext({
+        latencyHint: 'interactive',
+        sampleRate: 48000,
+    });
+
 
     let vertexShaderSource = `#version 300 es
     in float x;
     in float y;
     out vec4 v_color;
 
+    vec3 hsv2rgb(vec3 c) {
+      c = vec3(c.x, clamp(c.yz, 0.0, 1.0));
+      vec4 K = vec4(1.0, 2.0 / 3.0, 1.0 / 3.0, 3.0);
+      vec3 p = abs(fract(c.xxx + K.xyz) * 6.0 - K.www);
+      return c.z * mix(K.xxx, clamp(p - K.xxx, 0.0, 1.0), c.y);
+    }
+
     void main(){
       gl_Position = vec4(x, y*2.0-1.0, 0, 1);
-      v_color = vec4(0.5, 0.5, 0.5, 1);
+      v_color =  vec4(hsv2rgb(vec3(x * 0.5 + 0.5, y, 1)), 1);
     }
     `
 
@@ -34,14 +59,27 @@
       OutColor = v_color;
      }
     `
+    file.onchange = function () {
+        let fr = new FileReader();
+        fr.readAsDataURL(document.getElementById("file").files[0]);
+        fr.onload = e => {
+            audioCtx.resume()
+
+            console.log(audioCtx, analyser)
+            let audio = createAudio(e.target.result, true);
+            let source = audioCtx.createMediaElementSource(audio);
+
+            source.connect(analyser);
+            analyser.connect(audioCtx.destination);
+            audio.play();
+
+            render()
+
+        };
+    }
 
     let glProgram = initShader(gl, vertexShaderSource, fragmentShaderSource);
 
-
-    let audioCtx = new window.AudioContext({
-        latencyHint: 'interactive',
-        sampleRate: 48000,
-    });
 
     let options = {
         'fftSize': 2048,
