--- a/webgl/audio-webgl-v2.html
+++ b/webgl/audio-webgl-v2.html
@@ -92,7 +92,7 @@
 
     void main(){
       gl_Position = vec4(x, y*2.0-1.0, 0, 1);
-      v_color =  vec4(hsv2rgb(vec3(x * 0.5 + 0.5, y, 1)), 1);
+      v_color =  vec4(hsv2rgb(vec3(x * 0.5 + 0.5, y * 0.5 + 0.5, 1)), 1);
     }
     `
 
