--- a/app/fuckyiqing.html
+++ b/app/fuckyiqing.html
@@ -47,6 +47,7 @@
             <v-btn class="my-2" @click="isInside()" block
               >我在数据库里面吗？</v-btn
             >
+            <v-btn class="my-2" @click="is_checked()" block>我填报了吗？</v-btn>
             <v-text-field
               v-model="api_host"
               outlined
@@ -101,11 +102,11 @@
             fetch(`${this.api_host}/user/insert`, {
               method: "POST",
               body: form_data,
-            }).then((response) => {
-              if (response.status === 200) {
-                this.msg = response.json()["msg"];
-              } else {
+            }).then(async (response) => {
+              if (response.status !== 200) {
                 this.msg = "录入失败，可能是密码错误导致的。";
+              } else {
+                this.msg = (await response.json()).msg;
               }
               this.snackbar = true;
             });
@@ -122,6 +123,22 @@
                 this.msg = "在";
               } else {
                 this.msg = "不在";
+              }
+              this.snackbar = true;
+            });
+          },
+          is_checked() {
+            let form_data = new FormData();
+            form_data.append("username", this.username);
+            form_data.append("password", this.password);
+            fetch(`${this.api_host}/is_checked`, {
+              method: "POST",
+              body: form_data,
+            }).then(async (response) => {
+              if (response.status === 200) {
+                this.msg = (await response.json()).msg;
+              } else {
+                this.msg = "密码错误";
               }
               this.snackbar = true;
             });
