--- a/app/fuckyiqing.html
+++ b/app/fuckyiqing.html
@@ -14,6 +14,7 @@
       content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no, minimal-ui"
     />
   </head>
+  <title>Fuck Yi Qing</title>
   <body>
     <div id="app">
       <v-app>
