webgl update to index.html

--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
         >Netease Cloud Music daily recommendation</v-btn
       >
       <v-btn class="text-none" href="dip/">Digital image processing</v-btn>
+      <v-btn class="text-none" href="webgl/">WebGL</v-btn>
     </v-app>
     <script src="https://cdn.jsdelivr.net/npm/vue@2.x/dist/vue.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/vuetify@2.x/dist/vuetify.min.js"></script>
