--- a/webgl/transform.html
+++ b/webgl/transform.html
@@ -8,6 +8,7 @@
 </head>
 <body>
 <div>
+    <div>If you have a keyboard you can you [WSAD] and [arrow key] to move the parallelogram.</div>
   <canvas id="sheep" style="border: 1px solid" width="400px" height="400px"></canvas>
 </div>
 <script src="../assets/lib/sgl.js"></script>
