add dip link for js and webgl E.

--- a/dip/index.html
+++ b/dip/index.html
@@ -22,6 +22,7 @@
   <body>
     <v-app id="app">
       <v-main>
+      <a href="../webgl/dip-webgl.html" title="就这样了">WebGL版本</a>
         <v-card class="ma-2 pa-1 d-inline-block">
           <v-file-input
             v-model="file"
