--- a/webgl/dip-webgl.html
+++ b/webgl/dip-webgl.html
@@ -18,6 +18,7 @@
   </head>
   <body>
     <div id="app">
+      <a href="../dip/index.html" title="就这样了">Js版本</a>
       <!-- {{canvas.width}} {{canvas.height}} -->
       <img
         ref="image"
