--- a/webgl/video.html
+++ b/webgl/video.html
@@ -5,7 +5,7 @@
     <title>Title</title>
 </head>
 <body>
-<video id="video"  src="https://cd.oldshensheep.com/s/7nMLDXDQQMYM8TT/download/%E7%A5%9E%E5%A5%B3%E5%8A%88%E8%A7%82.mp4" controls width="320" height="240"></video>
+<video id="video" crossorigin="anonymous" src="https://cd.oldshensheep.com/s/7nMLDXDQQMYM8TT/download/%E7%A5%9E%E5%A5%B3%E5%8A%88%E8%A7%82.mp4" controls width="320" height="240"></video>
 <canvas id="canvas" style="border: 1px solid"></canvas>
 <script src="../assets/lib/sgl.js"></script>
 <script>
